working on modal -show -hide

--- a/src/Components/styles.scss
+++ b/src/Components/styles.scss
@@ -54,18 +54,22 @@
 }
 
 .modal-overlay {
-  // background: rgba(0, 0, 0, 0.75);
-  // display: flex;
-  // align-items: flex-start;
-  // position: fixed;
-  // top: 0;
-  // left: 0;
-  // right: 0;
-  // bottom: 0;
-  // overflow-y: auto;
-  // overflow-x: hidden;
-  // z-index: 1000;
-  // padding: 1.2rem;
+  background: rgba(0, 0, 0, 0.75);
+  display: none;
+  align-items: flex-start;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 1000;
+  padding: 1.2rem;
+
+  &.isShow {
+    display: block;
+  }
 }
 
 .modal-wrapper {
@@ -87,6 +91,9 @@
   }
 
   .currencyModal {
+    &.isActive {
+      display: block;
+    }
 
     &__search,
     select {
@@ -132,7 +139,8 @@
   }
 
   .settingModal {
-    display: flex;
+    display: none;
+    overflow: hidden;
     flex-direction: column;
 
     #settingModal__source_api {
